Re-added @angular/pwa; fixed link styling

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
 
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
   <div class="main-content">
     <app-root>Loading...</app-root>
   </div>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
