--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
-
+  <style>
+    @font-face {
+      font-family: 'Lato';
+      font-display: swap;
+      src: local('Lato'), url(https://fonts.googleapis.com/css?family=Lato|Open+Sans) format('woff2');
+    }
+  </style>
+  
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
 </head>
