Cleaned navbar alignment

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,12 @@
       src: local('Lato'), url(https://fonts.googleapis.com/css?family=Lato|Open+Sans) format('woff2');
     }
   </style>
-  
+
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
 </head>
 
 <body>
